// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxComponent matches snapshot 1`] = `
<div
  className="usa-grid-full  tm-checkbox "
>
  <input
    checked="value"
    disabled={false}
    id="id"
    name="name"
    onChange={[Function]}
    title="title"
    type="checkbox"
    value="value"
  />
  <label
    htmlFor="id"
  >
    <span
      className=""
    >
      label
    </span>
  </label>
</div>
`;

exports[`CheckBoxComponent matches snapshot when small = true and labelSrOnly = true 1`] = `
<div
  className="usa-grid-full  tm-checkbox tm-checkbox-small"
>
  <input
    checked="value"
    disabled={false}
    id="id"
    name="name"
    onChange={[Function]}
    title="title"
    type="checkbox"
    value="value"
  />
  <label
    htmlFor="id"
  >
    <span
      className="usa-sr-only"
    >
      label
    </span>
  </label>
</div>
`;
